kube/istioVirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews-route
  namespace: nginxTest
spec:
  hosts:
    - client.nginxTest.svc.cluster.local
  http:
    - name: "reviews-v2-routes"
      match:
        - uri:
            prefix: "/wpcatalog"
        - uri:
            prefix: "/consumercatalog"
      rewrite:
        uri: "/newcatalog"
      route:
        - destination:
            host: client.nginxTest.svc.cluster.local
            subset: v2
    - name: "reviews-v1-route"
      route:
        - destination:
            host: client.nginxTest.svc.cluster.local
            subset: v1
